--- a/tesssssst.html
+++ b/tesssssst.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <SCRIPT>
-var fs = require('fs')
-fs.appendFile('log.txt', 'new data', function (err) {
-  if (err) {
-    // append failed
-  } else {
-    // done
-  }
-})
-    </script>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Sample Page</title>
+<script>
+  window.onload = function() {
+    // JavaScript code to display a message
+    var message = "Hello, World!";
+    alert(message);
+  };
+</script>
 </head>
 <body>
-  hello
+<h1>This is a Sample Page</h1>
+<p>This page contains a simple JavaScript alert.</p>
 </body>
 </html>
