--- a/tesssssst.html
+++ b/tesssssst.html
@@ -3,27 +3,38 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Sample Page</title>
-<script>getFileContent();
-  function getFileContent() {
-  fetch('/getFileContent')
-    .then(response => {
-      if (!response.ok) {
-        throw new Error('Network response was not ok');
-      }
-      return response.text();
-    })
-    .then(data => {
-      document.getElementById('fileContent').innerText = data;
-    })
-    .catch(error => {
-      console.error('Error fetching file content:', error);
-    });
-}
-</script>
+<title>Add Email</title>
 </head>
 <body>
-<h1>This is a Sample Page</h1>
-<p>This page contains a simple JavaScript alert.</p>
+<input type="email" id="emailInput" placeholder="Enter email">
+<button onclick="addEmail()">Add Email</button>
+<div id="response"></div>
+
+<script>
+function addEmail() {
+  const email = document.getElementById('emailInput').value;
+
+  // Create request body
+  const data = new FormData();
+  data.append('email', email);
+
+  fetch('add_email.php', {
+    method: 'POST',
+    body: data
+  })
+  .then(response => {
+    if (!response.ok) {
+      throw new Error('Network response was not ok');
+    }
+    return response.text();
+  })
+  .then(data => {
+    document.getElementById('response').innerText = data;
+  })
+  .catch(error => {
+    console.error('Error adding email:', error);
+  });
+}
+</script>
 </body>
 </html>
